Update library versions in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,5 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	adafruit/Adafruit NeoPixel@^1.12.0
 	bblanchon/ArduinoJson@^7.0.4
-	m5stack/M5Unified@^0.1.13
+	m5stack/M5Unified@^0.1.14
+	chhorisberger/M5StackMenuSystem@^1.2.0
